--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <div class="container">
             <nav>
                 <ul>
-                    <li class="logo"><a class="logo-text">REKAYASA PERANGKAT LUNAK</a></li>
+                    <li class="logo"><a class="logo-text">RILLA SOLUNA</a></li>
                     <li><a class="active" href="#home">BERANDA</a></li>
                     <li><a href="#">INFORMASI</a></li>
                     <li><a href="#">GALERI</a></li>
@@ -23,15 +23,14 @@
                <p id="tag">
                     <mark>Teknologi Informasi dan Komunikasi</mark>
                </p>
-               <h1>Rekayasa Perangkat Lunak</h1>
-               <p>Rekayasa Perangkat Lunak merupakan sebuah jurusan yang mempelajari dan 
-                                   mendalami semua cara-cara pengembangan perangkat lunak(software) termasuk pembuatan, pemeliharaan dan manajemen kualitas.
-                 RPL juga berkaitan dengan software komputer mulai dari pembuatan website, 
-                                   aplikasi, game dan semua yang berkaitan dengan pemrograman. 
+               <h1>RILLA SOLUNA</h1>
+               <p>SISWI SMK AL-WASHLIYAH 2 PERDAGANGAN
+               
+                
                </p>
           </div>
       </div>
-      <img src="img/rpl.png" />
+      <img src="img/POTO-removebg-preview.png" />
 </div>
 <div class="content2">
     <div class="card">
